--- a/control-ui/src/features/components/Options.css
+++ b/control-ui/src/features/components/Options.css
@@ -5,6 +5,38 @@
     flex-direction: column;
 }
 
+.lights {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.light_item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 5px;
+}
+
+#circle {
+    border-radius: 50%;
+    background-color: white;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    animation: scaleIn 4s infinite;
+}
+
+@keyframes scaleIn {
+    from {
+      transform: scale(0, 0);
+    }
+    to {
+      transform: scale(1, 1);
+    }
+  }
+
 #rectangle {
     height: 100%;
     width: 10px;
@@ -18,7 +50,7 @@
     background-color:black;
     display:table;
     width:250px;
-    height:100px;
+    height:250px;
 }
 
 #innerwrapper {
@@ -26,4 +58,12 @@
     vertical-align:middle;
 }
 
+#circlewrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:250px;
+    height:250px;
+    background-color: black;
+}
 @keyframes backandforth {0%{left:0;} 50%{left:96%;} 100%{left:0;}}
